--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ google-cloud-bigquery
 python-dotenv
 google-cloud-aiplatform[adk,agent_engines]
 google-cloud-bigquery-migration
+google-generativeai
+Pillow
+dbt-bigquery
