adding changes for creating tests script

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ google-cloud-bigquery
 python-dotenv
 google-cloud-aiplatform[adk,agent_engines]
 google-cloud-bigquery-migration
+langchain-google-community
+google-cloud-discoveryengine
